# CUIT-RayLab

./: CMakeLists.txt  readme.md
include/: Color.hpp  Intersection.hpp  MathHelper.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Vector.hpp
src/: Color.cpp  Intersection.cpp  MathHelper.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Vector.cpp  main.cpp
